--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand">Navbar</a>
-  <a class="navbar-brand" href="#">Login</a>
-
+    <a class="navbar-brand">Navbar</a>
+    <div>
+        <a class="navbar-brand" routerLink="login">Login</a>
+        <a class="navbar-brand" routerLink="profile">profile</a>
+    </div>
 </nav>
