--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,3 +1,29 @@
-<p>
-  login works!
-</p>
+<div class="mt-4 col-8 offset-s">
+    <div class="card">
+        <div class="card-header">Login Here</div>
+        <div class="card-body">
+            <form #loginForm=ngForm (ngSubmit)="onSubmit()">
+                <div class="alert alert-danger" [hidden]="!error">{{ error }}</div>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" [(ngModel)]="form.email" required>
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Password</label>
+                     <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" [(ngModel)]="form.password" required>
+                </div>
+                <div class="form-group form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-12 ">
+                        <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Submit</button>
+                        <a routerLink="/signup" class="btn btn-info float-right" >Register</a>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
