--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="mt-4 col-8 offset-s">
+<div class="mt-10 col-4 offset-4">
     <div class="card">
         <div class="card-header">Login Here</div>
         <div class="card-body">
@@ -20,7 +20,7 @@
                 <div class="form-group row">
                     <div class="col-sm-12 ">
                         <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Submit</button>
-                        <a routerLink="/signup" class="btn btn-info float-right" >Register</a>
+                        <a routerLink="/sign-up" class="btn btn-info float-right" >Register</a>
                     </div>
                 </div>
             </form>
