--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -1,3 +1,65 @@
-<p>
-  signup works!
-</p>
+<div class="mt-1 col-8 offset-2">
+  <div class="card">
+    <div class="card card-header">Register a Trading account</div>
+    <div class="card-body">
+      <form #signupForm=ngForm (ngSubmit)="onSubmit()" >
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <div>
+              <label for="inputEmail4">Name</label>
+              <input type="text" name="name" [(ngModel)]="form.name" class="form-control" id="inputName4" placeholder="Name" required>
+            </div>
+            <div>
+              <label for="inputEmail4">Email</label>
+              <input type="email" name="email" [(ngModel)]="form.email" class="form-control" id="inputEmail4" placeholder="Email" required>
+            </div>
+          </div>
+          <div class="form-group col-md-6">
+            <div>
+              <label for="inputPassword4">Password</label>
+              <input type="password" name="password" [(ngModel)]="form.password" class="form-control" id="inputPassword4" placeholder="Password" required>
+            </div>
+            <div>
+              <label for="inputPasswordConfirm4">Confirm Password</label>
+              <input type="password" name="password_confirmation" [(ngModel)]="form.password_confirmation" class="form-control" id="inputPasswordConfirm4" placeholder="Password"required>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputAddress">Address</label>
+          <input type="text" name="address" [(ngModel)]="form.address" class="form-control" id="inputAddress" placeholder="e.g 1234 Main St" required>
+        </div>
+        <div class="form-group">
+          <label for="inputAddress2">Address 2</label>
+          <input type="text" name="address2" [(ngModel)]="form.address2" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor" required>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputCity">City</label>
+            <input type="text" [(ngModel)]="form.city" name="city" class="form-control" id="inputCity" required>
+          </div>
+          <div class="form-group col-md-4">
+            <label for="inputState">State</label>
+            <select id="inputState" [(ngModel)]="form.state" name="state" class="form-control required" required>
+              <option selected>Choose...</option>
+              <option>...</option>
+            </select>
+          </div>
+          <div class="form-group col-md-2">
+            <label for="inputZip">Postal code</label>
+            <input type="text" [(ngModel)]="form.post_cost" name="post_code" class="form-control" id="inputZip" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <label class="form-check-label" for="gridCheck" required>
+              Check me out
+            </label>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="signupForm.invalid">Sign Up</button>
+      </form>
+    </div>
+  </div>
+</div>
