fix corrected - the post columns of the database was incorrect and is now fixed. I am able to store new users

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
                 <div class="form-group row">
                     <div class="col-sm-12 ">
                         <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Submit</button>
-                        <a routerLink="/sign-up" class="btn btn-info float-right" >Register</a>
+                        <a routerLink="/signup" class="btn btn-info float-right" >Register</a>
                     </div>
                 </div>
             </form>
