--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -19,10 +19,10 @@
               <label for="inputPassword4">Password</label>
               <input type="password" name="password" [(ngModel)]="form.password" class="form-control" id="inputPassword4" placeholder="Password" required>
             </div>
-            <div>
-              <label for="inputPasswordConfirm4">Confirm Password</label>
-              <input type="password" name="password_confirmation" [(ngModel)]="form.password_confirmation" class="form-control" id="inputPasswordConfirm4" placeholder="Password"required>
-            </div>
+            <!--<div>-->
+              <!--<label for="inputPasswordConfirm4">Confirm Password</label>-->
+              <!--<input type="password" name="password_confirmation" [(ngModel)]="form.password_confirmation" class="form-control" id="inputPasswordConfirm4" placeholder="Password"required>-->
+            <!--</div>-->
           </div>
         </div>
         <div class="form-group">
@@ -47,7 +47,7 @@
           </div>
           <div class="form-group col-md-2">
             <label for="inputZip">Postal code</label>
-            <input type="text" [(ngModel)]="form.post_cost" name="post_code" class="form-control" id="inputZip" required>
+            <input type="text" [(ngModel)]="form.post_code" name="post_code" class="form-control" id="inputZip" required>
           </div>
         </div>
         <div class="form-group">
@@ -58,7 +58,12 @@
             </label>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary" [disabled]="signupForm.invalid">Sign Up</button>
+        <div class="form-group row">
+          <div class="col-sm-12 ">
+            <button type="submit" class="btn btn-primary" [disabled]="signupForm.invalid">Submit</button>
+            <a routerLink="/login" class="btn btn-info float-right" >login</a>
+          </div>
+        </div>
       </form>
     </div>
   </div>
