--- a/frontend/src/app/components/password/request-reset/request-rest.component.html
+++ b/frontend/src/app/components/password/request-reset/request-rest.component.html
@@ -1,3 +1,24 @@
-<p>
-  request-rest works!
-</p>
+<div class="mt-10 col-4 offset-4">
+  <div class="card">
+    <div class="card-header">Reset Password</div>
+    <div class="card-body">
+      <form #requestResetForm=ngForm (ngSubmit)="onSubmit()">
+        <!--<div class="alert alert-danger" [hidden]="!error">{{ error }}</div>-->
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" name="email" class="form-control"
+                 id="exampleInputEmail1" placeholder="Enter email" [(ngModel)]="form.email" required>
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group row">
+          <div class="col-sm-12 ">
+            <button type="submit" class="btn btn-primary" [disabled]="requestResetForm.invalid">
+              Send Password Reset Email
+            </button>
+          </div>
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
