--- a/frontend/src/app/components/password/response-reset/response-reset.component.html
+++ b/frontend/src/app/components/password/response-reset/response-reset.component.html
@@ -1,3 +1,26 @@
-<p>
-  response-reset works!
-</p>
+<div class="mt-10 col-4 offset-4">
+  <div class="card">
+    <div class="card-header">Login Here</div>
+    <div class="card-body">
+
+      {{ form.resetToken }}
+      <form #resetPasswordForm=ngForm (ngSubmit)="onSubmit()">
+        <div class="alert alert-danger" [hidden]="!error">{{ error }}</div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" [(ngModel)]="form.email" required>
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" [(ngModel)]="form.password" required>
+        </div>
+        <div class="form-group row">
+          <div class="col-sm-12 ">
+            <button type="submit" class="btn btn-primary" [disabled]="resetPasswordForm.invalid">Change Password</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
