--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,3 +1,11 @@
-<div>
-  <app-live-currency></app-live-currency>
+<div class="container">
+    <div class="row mt-3">
+        <div class="col">
+            <app-live-currency></app-live-currency>
+        </div>
+        <div class="col">
+            <app-pair></app-pair>
+        </div>
+        <div class="col"></div>
+    </div>
 </div>
