--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -18,9 +18,11 @@
                   <label class="form-check-label" for="exampleCheck1">Check me out</label>
                 </div>
                 <div class="form-group row">
-                    <div class="col-sm-12 ">
-                        <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Submit</button>
-                        <a routerLink="/signup" class="btn btn-info float-right" >Register</a>
+                    <div class="col-sm-6 ">
+                        <button type="submit" class="btn btn-outline-success" [disabled]="loginForm.invalid">Submit</button>
+                    </div>
+                    <div class="col-sm-6">
+                        <a routerLink="/signup" class="btn btn-outline-info float-right" >Register</a>
                     </div>
                 </div>
               <small class="float-right">
