--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -3,7 +3,9 @@
     <div class="card card-header">Register a Trading account</div>
     <div class="card-body">
       <form #signupForm=ngForm (ngSubmit)="onSubmit()" >
+        <div class="alert alert-danger" [hidden]="!error.email">{{ error.email }}</div>
         <div class="form-row">
+
           <div class="form-group col-md-6">
             <div>
               <label for="inputEmail4">Name</label>
@@ -55,9 +57,11 @@
           </div>
         </div>
         <div class="form-group row">
-          <div class="col-sm-12 ">
-            <button type="submit" class="btn btn-primary" [disabled]="signupForm.invalid">Submit</button>
-            <a routerLink="/login" class="btn btn-info float-right" >login</a>
+          <div class="col-sm-6">
+            <button type="submit" class="btn btn-outline-primary" [disabled]="signupForm.invalid">Submit</button>
+          </div>
+          <div class="col-sm-6">
+            <a routerLink="/login" class="btn btn-outline-info float-right" >login</a>
           </div>
         </div>
       </form>
