--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,10 +1,52 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+@import "~ng-snotify/styles/simple";
 
 .ng-invalid:not(form) {
-    border-left: 5px solid gray;
+    border: 1px solid red;
 }
 
 .ng-valid:not(form) {
-  border-left: 5px solid greenyellow;
+  border: 1px solid green;
+}
+
+.bg-img {
+    background-image: url("assets/application-business-businessman-905869.jpg");
+}
+
+.xcard {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: max-content;
+    margin: auto;
+    text-align: center;
+    background: #b5c9da;
+
+}
+
+.xtitle {
+    color: grey;
+    font-size: 18px;
+}
+
+button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+}
+
+button:hover, a:hover {
+    opacity: 0.7;
 }
